--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "main": "src/index.ts",
   "devDependencies": {
+    "@pulumi/github": "4.9.1",
+    "@pulumi/pulumi": "3.22.1",
     "@tsconfig/node16": "1.0.2",
     "@types/node": "16.11.7",
     "typescript": "4.5.5"
