--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -44,8 +44,10 @@ jobs:
         id: superlinter_scan
         uses: github/super-linter/slim@b8641364ca9a79b3cf07f3c4c59a82709cd39094 # renovate: tag=v4
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
+          FILTER_REGEX_EXCLUDE: '.*Pulumi\.production\.yaml|.*state/.*'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TYPESCRIPT_DEFAULT_STYLE: prettier
           VALIDATE_ALL_CODEBASE: ${{ github.event_name != 'pull_request' }}
           VALIDATE_BASH: true
           VALIDATE_EDITORCONFIG: true
@@ -57,7 +59,6 @@ jobs:
           VALIDATE_SHELL_SHFMT: true
           VALIDATE_TYPESCRIPT_ES: true
           VALIDATE_YAML: true
-          TYPESCRIPT_DEFAULT_STYLE: prettier
 
   git_secrets:
     name: 'Git Secret Exposure Checks'
