--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "sourceMap": true,
     "experimentalDecorators": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.spec.ts"]
 }
