--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "ISC",
   "main": "src/index.ts",
+  "private": true,
   "devDependencies": {
     "@pulumi/github": "4.9.1",
     "@pulumi/pulumi": "3.22.1",
@@ -18,7 +19,8 @@
     "typescript": "4.5.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typecheck": "tsc --project ./tsconfig.json --noEmit"
   },
   "engines": {
     "node": ">=16.13.0"
