--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -33,6 +33,7 @@ jobs:
 
     permissions:
       contents: read
+      pull-requests: write
 
     steps:
       - name: Git - Checkout
@@ -54,8 +55,12 @@ jobs:
         uses: pulumi/actions@v3
         if: github.event_name != 'push' || github.ref != format('refs/heads/{0}', github.event.repository.default_branch)
         with:
-          command: preview --color never
+          command: preview
+          cloud-url: file://./state
           stack-name: ${{ env.PULUMI_STACK }}
+          secrets-provider: passphrase
+          comment-on-pr: true
+          edit-pr-comment: yes
         env:
           PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
 
@@ -63,7 +68,10 @@ jobs:
         uses: pulumi/actions@v3
         if: github.event_name == 'push' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         with:
-          command: up --yes --color never --message
+          command: up
+          cloud-url: file://./state
           stack-name: ${{ env.PULUMI_STACK }}
+          secrets-provider: passphrase
+          message: 'Associated Git Commit: ${{ github.event.commits[0].message }}'
         env:
           PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
