--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -123,7 +123,7 @@ jobs:
           cloud-url: file://./state
           stack-name: ${{ env.PULUMI_STACK }}
           secrets-provider: passphrase
-          message: 'Associated Git Commit: "${{ github.event.commits[0].message }}" by ${{ ${{ github.event.commits[0].author }} }} (sha: ${{ github.event.commits[0].id }})'
+          message: 'Associated Git Commit: "${{ github.event.commits[0].message }}" by ${{ github.event.commits[0].author }} (sha: ${{ github.event.commits[0].id }})'
         env:
           PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
 
