ci: add support for the "pull request merge queue" feature
https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/configuring-pull-request-merges/using-a-merge-queue

--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - gh-readonly-queue/main/**
   # run on pull requests that target the main branch
   pull_request:
     branches:
