--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dprint": "0.21.2",
     "git-format-staged": "2.1.3",
     "jest": "27.4.7",
+    "jest-junit": "13.0.0",
     "regenerator-runtime": "0.13.9",
     "typescript": "4.5.5"
   },
