--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -19,10 +19,11 @@ jobs:
     name: 'Pulumi - Preview Changes'
     runs-on: ubuntu-latest
 
+    # pull requests, pushes to branches other than the main branch, and scheduled runs
     if: github.event_name != 'push' || github.ref != format('refs/heads/{0}', github.event.repository.default_branch)
 
     concurrency:
-      # on branches (when a push even happens), we want all builds to complete even if commits/merging happens faster to make it easier to discover at which point
+      # on branches (when a push event happens), we want all builds to complete even if commits/merging happens faster to make it easier to discover at which point
       # something broke; else (on PRs and scheduled executions), we cancel "old" builds and run/(re)start the build with the latest changes
       group: ${{ github.event_name == 'push' && format('ci-main-{0}-{1}', github.workflow, github.sha) || format('ci-{0}-{1}', github.workflow, github.ref) }}
       cancel-in-progress: false
@@ -81,6 +82,7 @@ jobs:
     name: 'Pulumi - Apply Changes'
     runs-on: ubuntu-latest
 
+    # only pushes to the main branch
     if: github.event_name == 'push' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
 
     concurrency:
