chore: update renovate configuration

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -17,11 +17,11 @@
     "npm:unpublishSafe"
   ],
   "labels": ["dependencies"],
+  "rebaseWhen": "behind-base-branch",
   "packageRules": [
     {
-      "description": "Automatically merge minor and patch-level updates",
+      "description": "Minor and patch-level updates with usually no breaking changes",
       "matchUpdateTypes": ["minor", "patch", "digest", "pin", "lockFileMaintenance"],
-      "automerge": true,
       "stabilityDays": 5,
       "assignees": ["busybeaver"],
       "reviewers": ["busybeaver"]
@@ -29,9 +29,8 @@
       // https://docs.renovatebot.com/noise-reduction/#branch-automerging
     },
     {
-      "description": "Manually merge major updates",
+      "description": "Major updates with breaking changes",
       "matchUpdateTypes": ["major"],
-      "automerge": false,
       "stabilityDays": 7,
       "assignees": ["busybeaver"],
       "reviewers": ["busybeaver"],
