build: fix for auto approve pull requests workflow

--- a/.github/workflows/repository.yaml
+++ b/.github/workflows/repository.yaml
@@ -35,6 +35,9 @@ jobs:
           app_id: ${{ secrets.REPOSITORY_ASSISTANT_APP_ID }}
           private_key: ${{ secrets.REPOSITORY_ASSISTANT_PRIVATE_KEY }}
 
+      - name: temp
+        run: echo ${{ github.actor }}
+
       - name: GitHub - Auto Approve Pull Request
         uses: hmarr/auto-approve-action@v2.1.0
         with:
