--- a/.github/workflows/repository.yaml
+++ b/.github/workflows/repository.yaml
@@ -2,8 +2,11 @@ name: "Repository CI"
 
 on:
   pull_request_target:
-    #types:
-    #  - review_requested
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - review_requested
     branches:
       - main
 
@@ -36,9 +39,10 @@ jobs:
           private_key: ${{ secrets.REPOSITORY_ASSISTANT_PRIVATE_KEY }}
 
       - name: temp
-        run: echo ${{ github.actor }} ${{ github.event.action }}
+        run: echo ${{ github.actor }}
 
       - name: GitHub - Auto Approve Pull Request
         uses: hmarr/auto-approve-action@v2.1.0
+        # if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
           github-token: ${{ steps.github_generate_app_token.outputs.token }}
