--- a/.github/workflows/repository.yaml
+++ b/.github/workflows/repository.yaml
@@ -6,7 +6,7 @@ on:
       - opened
       - synchronize
       - reopened
-      - review_requested
+      # - review_requested
     branches:
       - main
 
