--- a/.github/workflows/repository.yaml
+++ b/.github/workflows/repository.yaml
@@ -38,11 +38,9 @@ jobs:
           app_id: ${{ secrets.REPOSITORY_ASSISTANT_APP_ID }}
           private_key: ${{ secrets.REPOSITORY_ASSISTANT_PRIVATE_KEY }}
 
-      - name: temp
-        run: echo ${{ github.actor }}
-
       - name: GitHub - Auto Approve Pull Request
         uses: hmarr/auto-approve-action@v2.1.0
-        # if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        # only auto-approve PRs that were opened by renovate
+        if: github.actor == 'renovate[bot]'
         with:
           github-token: ${{ steps.github_generate_app_token.outputs.token }}
