--- a/.github/workflows/repository.yaml
+++ b/.github/workflows/repository.yaml
@@ -81,7 +81,7 @@ jobs:
               }
             }
           owner: ${{ github.repository_owner }}
-          repo: ${{ github.repository.split('/')[1] }}
+          repo: homelab-iac # TODO: make this dynamic
           pullRequestNumber: ${{ github.event.pull_request.number }}
         env:
           GITHUB_TOKEN: ${{ steps.github_generate_app_token.outputs.token }}
