build(renovate): minor updates to the configuration

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -27,7 +27,7 @@
       "reviewers": ["repository-assistant[bot]"]
     },
     {
-      "description": "Major updates with breaking changes",
+      "description": "Major updates with potentially breaking changes",
       "matchUpdateTypes": ["major"],
       "stabilityDays": 7,
       "assignees": ["busybeaver"],
